Some images uploaded for dummy data

--- a/ecommerce-final/composer.json
+++ b/ecommerce-final/composer.json
@@ -12,7 +12,9 @@
         "laravel/jetstream": "^2.5",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
-        "livewire/livewire": "^2.5"
+        "livewire/livewire": "^2.5",
+        "mailchimp/marketing": "^3.0",
+        "spatie/laravel-newsletter": "^4.10"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
